--- a/app/assets/stylesheets/_footer.css.scss
+++ b/app/assets/stylesheets/_footer.css.scss
@@ -15,10 +15,12 @@ footer a:hover {
 
 footer small {
   float: left;
+  font-size: 91%;
 }
 
 footer ul {
   float: right;
+  font-size: 15px;
   list-style: none;
 }
 
