--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -1,5 +1,6 @@
-<% provide(:page_title, 'Все посты') %>
+<% provide(:page_title, 'Главная') %>
 <% provide(:blog_active, 'active') %>
+
 
 <div class="row">
 
