--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -7,6 +7,7 @@
 <h1><%= @post.title %> </h1>
 <p> <%= @post.display_day_published %> </p>
 <%= @post.body.html_safe %>
+<%= social_share_button_tag(@post.title) %>
 <center>
 <div class="author-bio">
 <%= image_tag(@post.author.gravatar_image_url) %>
@@ -23,19 +24,12 @@
 
 <script>
 
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-
-
-
 var disqus_config = function () {
-this.page.url = '<%= request.original_url %>';  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = '<%= @post.slug %>'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.url = '<%= request.original_url %>'; 
+this.page.identifier = '<%= @post.slug %>'; 
 };
 
-(function() { // DON'T EDIT BELOW THIS LINE
+(function() { 
 var d = document, s = d.createElement('script');
 s.src = 'https://transnistria-trip.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
