--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,9 @@
-<center><h1>Обратная связь </h1></center>
+<h1>Нашли интересные цены на все, что интересно путешественникам? Поделитесь! </h1>
+<p> Нашли интересное специальное предложение от какой-нибудь авиакомпании? Случайно наткнулись на потрясающие тарифы на каком-то маршруте? А может просто нашли способ как сэкономить несколько десятков долларов? Или увидели промо-код на скидку в отеле? Расскажите об этом!
+
+Нашему сайту интересна информация о любых акциях и специальных предложениях, которые могут быть интересны читателям. Просто заполните форму ниже и мы постараемся опубликовать присланные материалы максимально быстро:</p> 
+
+<br>
 
 <%= form_for @contact do |f| %>
 
@@ -8,7 +13,7 @@
    
   <div class="form-group form-group-lg">
   
-    <%= f.label "Имя",class: "col-sm-10 control-label" %> 
+    <%= f.label "Имя*",class: "col-sm-10 control-label" %> 
    
   <div class="col-sm-10">
      <%= f.text_field :name, required: true, class: 'form-control' %> 
@@ -17,16 +22,23 @@
 
     <div class="form-group form-group-lg">
      
-    <%= f.label :Email,class: "col-sm-10 control-label" %>
+    <%= f.label "Emai*",class: "col-sm-10 control-label" %>
       
     <div class="col-sm-10">
     <%= f.email_field :email, required: true, class: 'form-control' %>
     </div>
     </div>
 
+     <div class="form-group form-group-lg">
+    <%= f.label 'Фото',class: "col-sm-10 control-label" %>
+    <div class="col-sm-10">
+    <%= f.text_field :banner_image_url,as: :text, class: 'form-control' %>
+    </div>
+    </div>
+
   <div class="form-group form-group-lg">
   
-    <%= f.label "Сообщение",class: "col-sm-10 control-label" %>
+    <%= f.label "Сообщение*",class: "col-sm-10 control-label" %>
     <div class="col-sm-10 ">
     <%= f.text_area :message, as: :text, class: 'form-control' %>
 
