--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
   
     <ul>
       <li><%= link_to 'Главная', root_path%></li>
-      <li><%= link_to 'Новости', news_path%></li>
+      <li><%= link_to 'Все статьи', index_path%></li>
       <li><%= link_to 'Обратная связь', new_contact_path%></li>
     </ul>
     
